styles/prettyUI.less
#leftcol {
  width:25%;
  background-color: #272727;
  color: #d6d6d6;
  font-family: Ubuntu;
  font-size: 11pt;
  float: left;
  height: initial;
  overflow: auto;
  bottom: 0;
  position: fixed;
  z-index: -1;
  top: 30px;
  padding-bottom: 20px;
  padding-top: 10px;
}

#rightcol {
  margin-left: 25%; 
  background-color: #0D0D0D;
  height: initial;
  display: block !important;
  position: fixed;
  overflow: auto;
  width: -moz-available;
  width: -webkit-fill-available;
  float: right;
  z-index: -2;
  bottom: 0;
  top: 30px;
  padding-bottom: 20px;

  .profile-image {
    border-radius: 50%;
    width: 150px;
    height: auto;
    margin-top: 20px;
    margin: auto;
    display: block;
    padding: 10px;
  }
  
  .self-name {
    margin: auto;
    display: block;
    text-align: center;

    .name {
      font-size: large;
      color: #00b7ff;
    }
    .title {
      font-size: medium;
      color: bisque;
    }
  }

  .about-ul {
    padding-left: 30px;
    padding-right: 30px;
    position: relative;
    color: #efefef;
    // text-align: justify;
    padding-bottom: 10px;
  }

  .about-li {
    padding-left: 10px;
    padding-bottom: 15px;
    font-size: 11pt;
  }

  .head-title {
    font-size: x-large;
    margin: auto;
    display: block;
    padding-top: 10px;
    text-align: center;
    color: #d1d1d1;;
  }

  .edu-ul {
    padding-left: 25px;
  }

  .edu-li {
    padding-left: 5px;
    padding-bottom: 5px;

    .title {
      font-size: large;
      color: #efefef;
    }
    .year {
      font-size: small;
      color: #6d6d6d;
    }
    .course {
      font-size: medium;
      color: #afafaf;
    }
    .grade {
      font-size: 14px;
      color: #ccc;
    }
  }

  .exp-section {
    padding-left: 10px;
    padding-right: 25px;
    line-height: 1.5;
  }

  .exp-item {
    padding-left: 5px;
    padding-bottom: 5px;
    
    .exp-title-table {
      width: 100%;

      .logo {
        vertical-align: middle;
        width: 50px;
      }

      .title {
        font-size: large;
        color: #efefef;
        text-align: left;
        vertical-align: bottom;
      }
  
      .time {
        font-size: small;
        color: #6d6d6d;
        text-align: right;
        vertical-align: bottom;
      }

      .desig {
        font-size: medium;
        color: #afafaf;
        text-align: left;
        vertical-align: top;
      }
      .location {
        font-size: 14px;
        color: #ccc;
        text-align: right;
        vertical-align: top;
      }
    }

    .exp-desc-ul {
      // text-align: justify;
      line-height: 1.25;
      list-style: disclosure-closed;
      font-size: 11pt;
      padding-left: 55px;
      color: #cccccd;
    }
  }

  .resume-frame {
    height: 100%;
    width: 100%;
    border: 0;
    background: url(../data/loading.svg);
    background-repeat: no-repeat;
    background-position: center 20px;
  }

  .helptext {
    text-align: center;
    font-size: 10pt;
    color: #cccccd;
    margin-top: 0;
    margin-bottom: 10px;
  }


  .tech-container {
    float: left;
    font-size: 12pt;

    .big {
      font-size: 30pt;
      padding-right: 10px;
      line-height: 1.4;
    }
  }
}

.leftcolTab {
  padding-top: 5px;
  padding-bottom: 5px;
  padding-left: 5px;
  user-select: none;
  display: flex;
  align-items: center;
  height: 25px;

  &:hover {
    background-color: #2F2F2F;
    color: whitesmoke;
  }

  &.active {
    background-color: #c24619;

    &:hover {
      background-color: #cc491a;
    }
  }

  .icon {
    width: 20px;
    text-align: center;
    margin-right: 5px;
  }
}

.content {
  color: whitesmoke;
  // height: 100%;
  // overflow-y: scroll;
  // scrollbar-width: none;
  position: relative;
  padding-top: 10px;
  padding-bottom: 10px;
}


@media only screen and (max-width: 680px){
  #rightcol {
    margin-left: 0;
  }

  #leftcol {
    display: block;
    width: 0;
    -webkit-transition: width 0.4s ease-in-out;
    -moz-transition: width 0.4s ease-in-out;
    -o-transition: width 0.4s ease-in-out;
    transition: width 0.4s ease-in-out;

    &.active {
      width: 200px;
    }
  }

  .nav-opener {
    display: block;
    color: #e4e4e4;;
    padding-left: 15px;
    font-size: 30px;
    position: absolute;
    z-index: 10;
    user-select: none;
    margin-top: 5px;
  }
}

@media only screen and (min-width: 680px){
  .nav-opener {
    display: none;
  }
}

